src/style.css
body {
    height: 100%;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-color: #e7e7e7;
}

h1,
h2,
h3 {
    margin: 10px;
}


.headerTitle {
    width: 100%;
    display: flex;
    align-items: center;
    background-color: white;
    color: black;
    font-size: 80px;
    font-weight: bolder;
}

.square {
    background-color: #fe355c;
    height: 80px;
}

.headerTitle>p {
    margin: 0;
    padding: 10px;
}

#title {
    width: 100%;
    display: flex;
    justify-content: center;
}

#title>p {
    font-weight: bold;
    font-size: 20px;
    margin: 10px;
}

button {
    width: 80px;
    height: 30px;
    border: none;
    border-radius: 5px;
    font-weight: bold;
    background-color: #B43243;
    color: white;

}

#container {
    background-color: white;
    display: flex;
    flex-direction: column;
    padding: 10px;
}

.newProjectBtn {
    margin-bottom: 10px;
}

.cards {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
}

.projectCard {
    width: 300px;
    height: 300px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    padding: 10px;
    Box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.projectOptions {
    display: flex;
    justify-content: space-around;


}

.footer {
    width: 100%;
    display: flex;
    justify-content: center;
    margin-top: auto;
    background-color: #fe355c;
    font-weight: bold;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

/*DIALOG FORM*/
#showModal {
    width: 300px;
    border: none;
    border-radius: 5px;
    box-shadow: rgba(0, 0, 0, 0.20) 0px 5px 15px;
}

#showModal>h2 {
    text-align: center;
}

ul {
    list-style: none;
    padding: 0;
}

li {
    padding: 10px;
}

label {
    display: block;
    font-size: 15px;
    font-weight: bold;
}

input[type=text],
textarea {
    width: 100%;
}


#confirmBtn {
    padding: 5px 0px;
    font-size: large;
    font-weight: bold;
    color: white;
    background-color: #1c1c1c;
    border: none;
    border-radius: 5%;
    width: 100%;

}

